# tcxPave

./: .gitignore  CMakeLists.txt  PAVE.md  README.md
example-pave/: CMakeLists.txt  CMakePresets.json  addons.make
example-pave/src/: main.cpp  tcApp.cpp  tcApp.h
src/: Pave.h  PaveArc.h  PaveCubicBezier.h  PaveCurve.h  PaveData.h  PaveDistort.h  PaveLine.h  PaveLocation.h  PavePath.h  PaveSegment.h  PaveTypes.h
